@@ -151,15 +151,15 @@ class Ingo
      */
     static public function validateFolder(Horde_Variables $vars, $name)
     {
-        if ($vars->$name) {
-            return $vars->$name;
-        }
-
         $new_id = $name . '_new';
         if (isset($vars->$new_id) &&
             $GLOBALS['registry']->hasMethod('mail/createFolder') &&
-            $GLOBALS['registry']->call('mail/createFolder', array('folder' => Horde_String::convertCharset($vars->new_id, 'UTF-8', 'UTF7-IMAP')))) {
+            $GLOBALS['registry']->call('mail/createFolder', array('folder' => Horde_String::convertCharset($vars->$new_id, 'UTF-8', 'UTF7-IMAP')))) {
             return $vars->$new_id;
+        }
+
+        if ($vars->$name) {
+            return $vars->$name;
         }
 
         throw new Ingo_Exception(_("Could not validate IMAP mailbox."));
